infrastructure/k8s/tweets-analyzer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tweets-analyzer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tweets-analyzer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tweets-analyzer
    spec:
      containers:
        - image: benjypfeffer/hostile-tweets-analyzer:v1
          name: tweets-analyzer
          ports:
            - containerPort: 8000
              name: tweets-analyzer
