infrastructure/k8s/tweets-analyzer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tweets-analyzer
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30010
  selector:
    app: tweets-analyzer
